[2] 화면 디자인 시작 : Nav bar 화면 디자인 및 css 조정

--- a/web/src/css/App.module.css
+++ b/web/src/css/App.module.css
@@ -1,5 +1,6 @@
 :root {
-    --Header-height: 30px;
+    --Header-height: 80px;
+    --Header-button-height: calc(var(--Header-height) * 0.4);
 }
 
 .container {
