--- a/web/src/css/Nav.module.css
+++ b/web/src/css/Nav.module.css
@@ -23,6 +23,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    white-space: nowrap;
 }
 .netflixLogo {
     height: var(--Header-height);
