[3] API 요청 : image Link 추가 및 view에 loading할 수 있게 변경

--- a/web/src/css/MainPage.module.css
+++ b/web/src/css/MainPage.module.css
@@ -1,6 +1,17 @@
 .container {
-
+    height: 500px;
+    background-color: rgba(211, 211, 211, 0.6);
+    background-size: cover;
+    background-position: top center;
+}
+.bannerContainer {
+    height: 500px;
+    background-size: cover;
+    background-position: top center;
 }
 .banner {
+
+}
+.bannerTitle {
 
 }
