[3] API 요청 : image view 에 추가하고 banner css 조정

--- a/web/src/css/App.module.css
+++ b/web/src/css/App.module.css
@@ -1,8 +1,10 @@
 :root {
     --Header-height: 80px;
-    --Header-button-height: calc(var(--Header-height) * 0.4);
+    /*--Header-button-height: calc(var(--Header-height) * 0.4);*/
+    --Header-button-height: 32px;
 }
 
 .container {
-    margin-top: var(--Header-height);
+    user-select:none;
+    /*margin-top: var(--Header-height);*/
 }
