--- a/web/src/css/MainPage.module.css
+++ b/web/src/css/MainPage.module.css
@@ -1,11 +1,12 @@
 .container {
-    height: 500px;
+    height: 800px;
     background-color: rgba(211, 211, 211, 0.6);
     background-size: cover;
     background-position: top center;
+
 }
 .bannerContainer {
-    height: 500px;
+    height: 800px;
     background-size: cover;
     background-position: top center;
 }
@@ -13,5 +14,50 @@
 
 }
 .bannerTitle {
+    display: flex;
+    position: relative;
+    top: 25%;
+    left: 5%;
+    color: white;
+    font-size: 2.5rem;
+    white-space: nowrap;
 
+}
+.bannerButtons {
+    display: flex;
+    position: relative;
+    top: 30%;
+    left: 5%;
+    gap: 10px;
+    white-space: nowrap;
+}
+.bannerButton {
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+}
+.play {
+    background-color: white;
+    color: black;
+}
+.info {
+    background-color: rgba(96, 96, 96, 0.7);
+    color: white;
+    /*padding: 0 20px;*/
+}
+.bannerButton:hover {
+    background-color: rgba(164, 164, 164, 0.9);
+}
+.bannerDescription {
+    position: relative;
+    color: white;
+    top: 35%;
+    left: 5%;
+    font-size: 1.2rem;
+    width: 400px;
+    line-height: 1.3em;
 }
