[3] [css] : fade 효과 추가

--- a/web/src/css/MainPage.module.css
+++ b/web/src/css/MainPage.module.css
@@ -1,44 +1,57 @@
+:root {
+    --banner-image-size: 800px;
+}
+/** {*/
+/*    box-sizing: border-box;*/
+/*}*/
+.mainHeader {
+    box-sizing: border-box;
+    max-width: 100vw;
+}
 .container {
-    height: 800px;
+    height: var(--banner-image-size);
     background-color: rgba(211, 211, 211, 0.6);
     background-size: cover;
     background-position: top center;
-
+    /*max-width: 100vw;*/
 }
 .bannerContainer {
-    height: 800px;
+    height: var(--banner-image-size);
     background-size: cover;
     background-position: top center;
+    /*max-width: 100vw;*/
 }
-.banner {
+/*.banner {*/
 
-}
+/*}*/
 .bannerTitle {
     display: flex;
     position: relative;
     top: 25%;
     left: 5%;
+    width: calc(100% - 5%);
     color: white;
     font-size: 2.5rem;
     white-space: nowrap;
-
 }
 .bannerButtons {
     display: flex;
     position: relative;
-    top: 30%;
+    top: 27%;
     left: 5%;
+    width: calc(100% - 5%);
     gap: 10px;
     white-space: nowrap;
 }
 .bannerButton {
-    height: 30px;
+    height: 40px;
     justify-content: center;
     align-items: center;
     padding: 0 20px;
     border: none;
     cursor: pointer;
     border-radius: 3px;
+    font-size: 1.2rem;
 }
 .play {
     background-color: white;
@@ -47,7 +60,21 @@
 .info {
     background-color: rgba(96, 96, 96, 0.7);
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /*padding: 0 20px;*/
+}
+.info > span{
+    background-image: url("../../public/assets/info.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: inline-block;
+    width: 20px;
+    height: 40px;
+    z-index: 1;
+    margin-right: 5px;
 }
 .bannerButton:hover {
     background-color: rgba(164, 164, 164, 0.9);
@@ -55,9 +82,31 @@
 .bannerDescription {
     position: relative;
     color: white;
-    top: 35%;
+    top: 29%;
     left: 5%;
     font-size: 1.2rem;
     width: 400px;
     line-height: 1.3em;
+    text-shadow:
+            2px 2px 0 rgba(109, 109, 109, 0.2),
+            -2px 2px 0 rgba(109, 109, 109, 0.2),
+            2px -2px 0 rgba(109, 109, 109, 0.2),
+            -2px -2px 0 rgba(109, 109, 109, 0.2);
+}
+.bannerFade {
+    position: absolute;
+    top: 500px;
+    width: 100%;
+    height: 300px;
+    background: linear-gradient(to bottom,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0.2) 20%,
+            rgba(0, 0, 0, 0.3) 30%,
+            rgba(0, 0, 0, 0.6) 60%,
+            rgba(0, 0, 0, 1) 100%);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    pointer-events: none;
+    box-sizing: border-box;
+    z-index: 1;
 }
