[3] [css] : screen의 크기가 달라짐에 따라서 가운데 정렬할 수 있게 설정

--- a/web/src/css/App.module.css
+++ b/web/src/css/App.module.css
@@ -2,9 +2,21 @@
     --Header-height: 80px;
     /*--Header-button-height: calc(var(--Header-height) * 0.4);*/
     --Header-button-height: 32px;
+    --max-width: 1920px;
 }
-
+.app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+}
 .container {
+    width: 100%;
     user-select:none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     /*margin-top: var(--Header-height);*/
 }
