--- a/web/src/css/MainPage.module.css
+++ b/web/src/css/MainPage.module.css
@@ -1,29 +1,36 @@
 :root {
     --banner-image-size: 800px;
 }
-/** {*/
-/*    box-sizing: border-box;*/
-/*}*/
 .mainHeader {
     box-sizing: border-box;
     max-width: 100vw;
 }
+
 .container {
     height: var(--banner-image-size);
     background-color: rgba(211, 211, 211, 0.6);
+    /* 동적으로 요청했을 때 이미지가 없으면 기본 삽입할 정적 이미지 추가*/
+    /*background-image: url("");*/
     background-size: cover;
     background-position: top center;
-    /*max-width: 100vw;*/
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .bannerContainer {
     height: var(--banner-image-size);
     background-size: cover;
     background-position: top center;
-    /*max-width: 100vw;*/
 }
-/*.banner {*/
-
-/*}*/
+.banner {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: var(--banner-image-size);
+    width: 90%;
+    max-width: var(--max-width);
+}
 .bannerTitle {
     display: flex;
     position: relative;
