--- a/web/src/css/MainPage.module.css
+++ b/web/src/css/MainPage.module.css
@@ -1,11 +1,13 @@
 :root {
     --banner-image-size: 800px;
+    --banner-detail-left-option: 5%;
+    --banner-detail-calc-left-option: calc(100% - var(--banner-detail-left-option));
+    --text-shadow:
+            2px 2px 0 rgba(109, 109, 109, 0.2),
+            -2px 2px 0 rgba(109, 109, 109, 0.2),
+            2px -2px 0 rgba(109, 109, 109, 0.2),
+            -2px -2px 0 rgba(109, 109, 109, 0.2);
 }
-.mainHeader {
-    box-sizing: border-box;
-    max-width: 100vw;
-}
-
 .container {
     height: var(--banner-image-size);
     background-color: rgba(211, 211, 211, 0.6);
@@ -23,6 +25,12 @@
     background-size: cover;
     background-position: top center;
 }
+.textDeco {
+    position: relative;
+    color: white;
+    left: var(--banner-detail-left-option);
+    text-shadow: var(--text-shadow);
+}
 .banner {
     display: flex;
     flex-direction: column;
@@ -32,23 +40,18 @@
     max-width: var(--max-width);
 }
 .bannerTitle {
-    display: flex;
-    position: relative;
+    display: inline;
     top: 25%;
-    left: 5%;
-    width: calc(100% - 5%);
-    color: white;
     font-size: 2.5rem;
-    white-space: nowrap;
+    width: var(--banner-detail-calc-left-option);
 }
 .bannerButtons {
     display: flex;
     position: relative;
     top: 27%;
-    left: 5%;
-    width: calc(100% - 5%);
+    left: var(--banner-detail-left-option);
+    width: var(--banner-detail-calc-left-option);
     gap: 10px;
-    white-space: nowrap;
 }
 .bannerButton {
     height: 40px;
@@ -87,18 +90,10 @@
     background-color: rgba(164, 164, 164, 0.9);
 }
 .bannerDescription {
-    position: relative;
-    color: white;
     top: 29%;
-    left: 5%;
     font-size: 1.2rem;
     width: 400px;
     line-height: 1.3em;
-    text-shadow:
-            2px 2px 0 rgba(109, 109, 109, 0.2),
-            -2px 2px 0 rgba(109, 109, 109, 0.2),
-            2px -2px 0 rgba(109, 109, 109, 0.2),
-            -2px -2px 0 rgba(109, 109, 109, 0.2);
 }
 .bannerFade {
     position: absolute;
