--- a/web/src/components/main/Main.module.css
+++ b/web/src/components/main/Main.module.css
@@ -76,7 +76,7 @@
     /*padding: 0 20px;*/
 }
 .info > span{
-    background-image: url("../../public/assets/info.svg");
+    background-image: url("../../../public/assets/info.svg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
