--- a/web/src/components/main/Main.module.css
+++ b/web/src/components/main/Main.module.css
@@ -112,3 +112,23 @@
     box-sizing: border-box;
     z-index: 1;
 }
+.itemContainer {
+
+}
+.itemTitle {
+
+}
+.items {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.items > img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 5px;
+    /*aspect-ratio: 16 / 9;*/
+}
