--- a/web/src/components/main/Main.module.css
+++ b/web/src/components/main/Main.module.css
@@ -113,22 +113,53 @@
     z-index: 1;
 }
 .itemContainer {
-
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    background-color: #111111;
+    padding: 2rem 0 2rem 4rem;
 }
 .itemTitle {
-
+    color: white;
+    font-size: 3.5rem;
+    margin: 3rem 0;
 }
 .items {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 10px;
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
     align-items: center;
+    gap: 10px;
+    /*justify-content: center;*/
+    /*align-items: center;*/
 }
 .items > img {
+    max-width: 400px;
+    border-radius: 10px;
+    object-fit: cover;
+    cursor: pointer;
+
+}
+.items > img:hover {
+    border-radius: 10px;
+    object-fit: cover;
+    cursor: pointer;
+    transition: transform 0.3s ease; /* 부드러운 확대 효과 */
+    transform-origin: center;
+    transform: scale(1.1);
+    z-index: 4;
+    border: 1px solid #444444;
+}
+.largeItem {
     width: 100%;
     height: auto;
-    object-fit: cover;
-    border-radius: 5px;
+    aspect-ratio: 12 / 16;
+}
+.item {
+    width: 100%;
+    height: auto;
     /*aspect-ratio: 16 / 9;*/
 }
+/*.item:hover, .largeItem:hover {*/
+/*    transform: scale(1.2);*/
+/*    z-index: 4;*/
+/*}*/
