--- a/web/src/components/common/Modal.module.css
+++ b/web/src/components/common/Modal.module.css
@@ -2,7 +2,7 @@
     border: none;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    width: 400px;
+    width: 800px;
     padding: 20px;
     background-color: white;
     /*position: relative;*/
@@ -14,6 +14,21 @@
     font-size: 1rem;
     margin-bottom: 20px;
     color: #333;
+}
+.content > p {
+    margin: 0.5rem 0;
+}
+.content > img {
+    width: 100%;
+    height: 400px;
+    box-sizing: content-box;
+}
+.content > h1 {
+    font-size: 3rem;
+    margin: 1rem 0;
+}
+.content > h5 {
+    font-size: 1.5rem;
 }
 
 .closeButton {
