[6] 가로 스크롤 hidden처리로, 화면을 축소, 확대하는 경우 ui가 개박살 하는걸 막음

--- a/web/src/App.module.css
+++ b/web/src/App.module.css
@@ -9,6 +9,7 @@
     align-items: center;
     align-content: center;
     flex-direction: column;
+    overflow-x: hidden
 }
 .container {
     width: 100%;
