--- a/web/src/components/search/Search.module.css
+++ b/web/src/components/search/Search.module.css
@@ -23,6 +23,12 @@
     max-width: 900px;
     max-height: 900px;
     object-fit: cover;
+    border-radius: 15px;
+    cursor: pointer;
+}
+.searchResult > img:hover {
+    transform: scale(1.05);
+    transition: 0.3s ease;
 }
 .searchNoResult {
     max-width: var(--max-width);
