--- a/web/src/components/common/Modal.module.css
+++ b/web/src/components/common/Modal.module.css
@@ -22,6 +22,7 @@
     width: 100%;
     height: 400px;
     box-sizing: content-box;
+    object-fit: cover;
 }
 .content > h1 {
     font-size: 3rem;
