--- a/web/src/components/common/Row.module.css
+++ b/web/src/components/common/Row.module.css
@@ -40,6 +40,7 @@ article > img {
     cursor: pointer;
     z-index: 1;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    /*display: flex;*/
 }
 
 article > img:hover {
